# lg-grounded-fmea

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
data/: README.md
notebooks/: lg_fmea_xjtu_colab.ipynb
src/lg_fmea_kg/: __init__.py  config.py  data.py  dataset.py  features.py  figures.py  kg.py  lg.py  models.py  synth.py
tests/: test_smoke.py
