[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lg-fmea-kg"
version = "1.0.0"
description = "Landau-Ginzburg grounded FMEA knowledge graph for hybrid bearing fault detection on XJTU-SY"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Diogo Rocha" },
    { name = "Rui Pinto" },
    { name = "Gil Goncalves" },
]
keywords = [
    "predictive maintenance",
    "fault detection",
    "Landau-Ginzburg",
    "knowledge graph",
    "FMEA",
    "physics-informed",
    "XJTU-SY",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "pandas>=1.5",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/your-username/lg-fmea-kg"
Repository = "https://github.com/your-username/lg-fmea-kg"

[tool.setuptools.packages.find]
where = ["src"]
